<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/menu_helper"
                android:icon="@drawable/ic_help"
                android:title="@string/action_helper"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_information"
                android:title="@string/about"/>
            <item
                android:id="@+id/night_pattern_switch"
                android:icon="@drawable/ic_night_mode"
                android:title="夜间模式"
                app:actionLayout="@layout/switch_item"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>
