...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu2"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="24dp"
...
                app:fab_colorPressed="@color/divider_light"
                fab:fab_colorNormal="@color/colorPrimaryLight"
                fab:fab_colorPressed="@color/divider_light"
                fab:fab_size="normal" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu2_fab_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_switch"
                app:fab_colorNormal="@color/colorPrimaryLight"
                app:fab_colorPressed="@color/divider_light"
                fab:fab_colorNormal="@color/colorPrimaryLight"
...
